config/web-app/02_deployment_uploader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uploader
  name: uploader
  namespace: uploader-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: uploader
    spec:
      securityContext:
        runAsUser: 1000680000
        fsGroup: 1000680000
      containers:
      - image: quay.io/rcook/tools:php-demo
        name: tools
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 5         
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: uploader-persistent
            mountPath: /opt/app-root/src/uploaded
      volumes:
        - name: uploader-persistent
          persistentVolumeClaim:
            claimName: uploader-pvc
