config/web-app/01_service_uploader.yaml
apiVersion: v1
kind: Service
metadata:
  name: uploader
  # namespace: uploader-app
  labels:
    app: uploader
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: uploader
  sessionAffinity: None
  type: ClusterIP
