config/web-app/04_route_uploader.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uploader
  namespace: uploader-app
spec:
  # host: uploader.octo.eng.rdu2.redhat.com
  host: uploader.apps.s1-aws-tn.dev09.red-chesterfield.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: uploader
    weight: 100
  wildcardPolicy: None
